# GoSouth

./: CMakeLists.txt  README.md
GoSouth/: .editorconfig  CMakeLists.txt  GoSouth.sln
GoSouth/GoSouth/: GoSouth.cpp  GoSouth.rc  GoSouth.vcxproj  GoSouth.vcxproj.filters  resource.h
GoSouth/GoSouth/graphic/: console_text.cpp
GoSouth/GoSouth/include/: Resource.h
GoSouth/GoSouth/include/graphic/: console_text.h
GoSouth/GoSouth/include/object/: buffmanger.h
GoSouth/GoSouth/main/: GoSouth.cpp
GoSouth/GoSouth/object/: buffmanger.cpp
GoSouthByUnity/ProjectSettings/: EditorSettings.asset  ProjectSettings.asset
